Revert "change pge base"
This reverts commit 86a4bbe3c66154b8882caa903b9038610b8a2852.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM hysds/pge-base:develop-es1
+FROM hysds/pge-gdal:latest
+
 MAINTAINER jlinick "Justin.P.Linick@jpl.nasa.gov"
 LABEL description="PGE for AOI creation"
 
